# CV_Soduku_solver_C

./: CMakeLists.txt  Image.cpp  Image.h  OCR.cpp  OCR.h  README.md  Sudoku.cpp  Sudoku.h  digitrecognizer.cpp  digitrecognizer.h  main.cpp
